v5.5.5
- Removed - ArrayAccess implementation where not required (prepare for PHP 8)
- Updated - Singleton Class __clone() and __wakeup() marked as public (PHP 8 warning fix)
- Updated - core/gallery to use grid layout
- Updated - core/image aligncenter fix
- Updated - core/cover inner container padding removed (use columns block for adding gutters)
- Updated - Gutenberg Styles core_blocks() list to 5.9.2 (added new blocks)
- Updated - WooCommerce updated block names exclude from theme Gutenberg Extensions
- Updated - Implement Configuration where ArrayAccess was removed + code cleanup
- Updated - Romanian local translations
- Updated - Query Pagination Numbers border to currentColor if button styles are having transparent border
- Updated - Query Comments Template and Pagination cleanup unnecessary methods after WP5.9 updates
- Fixed - Issue with core/cover top-left content alignment
- Fixed - Issue with invalid starter content for About page
- Fixed - Issue with blockGap CSS generation due to being saved as array after Gutenberg plugin update (logical block margin based on writing mode)
- Fixed - Generate CSS for vertical blockGap (eg, Group block with multiple Columns)
- Fixed - core/spacer double output of units in generated CSS
- Fixed - core/spacer height issue with .vr class in navigation - on mobile
- Added - WooCommerce HTML starter templates
- Added - New Header/Footer template parts: Header Dark, Header Logo Left, Header with Search, Footer Dark (removed as patterns)
- Added - Author Box template
- Added - Default patterns as PHP files for Gutenberg 12.9.0 / Maintain HTML registration as well for backwards compat

v5.5.3/4
- Updated - Certain blocks logic to make use of custom palette colors along with default ones - previously was overwriting them
- Updated - Starter features.php to about.php + fixed a slug (for some reason it does not loads on WP.org)
- Updated - core/separator faded style width to 100% for backend overwrite