@@ -6,7 +6,7 @@ Author URI: https://www.wecodeart.com/about/
 Description: A simple WordPress Theme Framework focused on SEO and speed (perfect 100% PageSpeed scores). Is realy fast (300ms), fully customizable & beautiful theme suitable for blog, personal portfolio, business website and WooCommerce storefront. Take full control over your site with the new Full Site Editor feature. The theme also works perfectly with all page builder plugins (Elementor, Brizy, Beaver Builder, Visual Composer, SiteOrigin, Divi) and it's core blocks are also optimized using Bootstrap's markup - the perfect tool for any developer.
 Version: 5.5.5
 Requires PHP: 7.0
-Requires at least: 5.9.2
+Requires at least: 5.9.3
 Tested up to: 6.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
